# Agentic-Resume-Analyzer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
app/: config.py  models.py
app/graph/: main_graph.py  rag_subgraph.py  state.py
app/ingestion/: indexer.py  loader.py  normalizer.py  pipeline.py
app/tools/: retrieval_tool.py  scoring_tool.py
app/utils/: text_extraction.py
benchmarks/: load_test.py
data/raw/knowledge_base/: audit_guide.txt  career_growth_framework.txt  csharp_dotnet_guide.txt  data_analyst_guide.txt  interview_and_application_strategy.txt  marketing_guide.txt  python_backend_guide.txt  qa_engineer_guide.txt  react_frontend_guide.txt  recruiter_screening_and_explanation_rules.txt  resume_optimization_playbook.txt  skill_gap_and_upskilling_framework.txt  tax_consulting_guide.txt
data/raw/resumes/: candidate_C001.json  candidate_C002.json  candidate_C003.json  candidate_C004.json  candidate_C005.json  candidate_C006.json  candidate_C007.json  candidate_C008.json  candidate_C009.json  candidate_C010.json  candidate_C011.json  candidate_C012.json  candidate_C013.json  candidate_C014.json  candidate_C015.json  candidate_C016.json  candidate_C017.json  candidate_C018.json  candidate_C019.json  candidate_C020.json  candidate_C021.json  candidate_C022.json  candidate_C023.json  candidate_C024.json  candidate_C025.json  candidate_C026.json  candidate_C027.json  candidate_C028.json  (+72 more)
evaluation/: eval_dataset.json  run_eval.py
scripts/: generate_test_data.py  ollama_entrypoint.sh
(+100 files in other folders)
